feat: users mock extended

--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="chepo.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="chepo, mock data, dummy data, data modal, mock data for project, free data, hidaytrahman" />
-    <meta name="description" content="Chepo is the easiest way to provide mock data and modal for your project, just copy and paste it into your project. You can use the generated data without any additional effort." />
-    <meta name="author" content="Hidayt Rahman" />
-    <title>Chepo | Chepo is the easiest way to provide mock data and modal for your project</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="chepo.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="keywords"
+			content="chepo, mock data, dummy data, data modal, mock data for project, free data, hidaytrahman"
+		/>
+		<meta
+			name="description"
+			content="Chepo is the easiest way to provide mock data and modal for your project, just copy and paste it into your project. You can use the generated data without any additional effort."
+		/>
+		<meta name="author" content="Hidayt Rahman" />
+		<title>Chepo | Chepo is the easiest way to provide mock data and modal for your project</title>
+
+		<script
+			async
+			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9415192399721186"
+			crossorigin="anonymous"
+		></script>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.tsx"></script>
+	</body>
 </html>
