feat: dark mode json viewer

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 		/>
 		<meta name="author" content="Hidayt Rahman" />
 		<title>Chepo | Chepo is the easiest way to provide mock data and modal for your project</title>
+		<!-- <link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/atelier-cave-dark.min.css"
+		/> -->
 
 		<script
 			async
